--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,17 +4,13 @@ version = "0.1.0"
 description = "Model training and optimization"
 authors = ["ihranicky <ihranicky@fit.vutbr.cz>"]
 readme = "README.md"
-packages = [{include = "domainradar_training"}]
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = "~=3.11"
 notebook = ">=6.5.4"
 scikit-learn = ">=1.2.2"
-nvidia-cuda-cupti-cu12 = ">=12.1.105"
-nvidia-cuda-nvcc = ">=12.1.105"
-nvidia-cudnn = ">=8.2.0.51"
-nvidia-cudnn-cu12 = ">=8.9.2.26"
-tensorflow = ">=2.15.0.post1"
+tensorflow-io-gcs-filesystem = {version = ">=0.36.0", python = ">=3.11,<3.12"}
+tensorflow = ">=2.15.0"
 keras = ">=2.15.0"
 keras-visualizer = ">=3.1.2"
 visualkeras = "0.0.2"
@@ -26,7 +22,7 @@ pymongoarrow = ">=0.7.0"
 python-dotenv = ">=1.0.0"
 click = ">=8.1.3"
 tldextract = ">=3.2.0"
-dnspython = "~=2.3.0"
+dnspython = "~=2.5.0"
 pymongo = ">=4.4.0"
 pyarrow = "^15.0.0"
 nltk = ">=3.8.1"
@@ -43,7 +39,6 @@ torch = "^2.1.2"
 category-encoders = "^2.6.3"
 DateTime = "^5.4"
 sklearn-pandas = "^2.2.0"
-tensorflow = "^2.15.0.post1"
 toolkits = "^0.2.6"
 "mpl-toolkits.clifford" = "^0.0.3"
 tqdm = "^4.66.2"
