--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,8 +10,8 @@ python = "~=3.11"
 notebook = ">=6.5.4"
 scikit-learn = ">=1.2.2"
 tensorflow-io-gcs-filesystem = {version = ">=0.36.0", python = ">=3.11,<3.12"}
-tensorflow = ">=2.15.0"
-keras = ">=2.15.0"
+tensorflow = "~=2.15.0"
+keras = "^2.15.0"
 keras-visualizer = ">=3.1.2"
 visualkeras = "0.0.2"
 xgboost = "^2.0.3"
