Updated poetry config

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ keras = "^2.15.0"
 keras-visualizer = ">=3.1.2"
 visualkeras = "0.0.2"
 xgboost = "^2.0.3"
+lightgbm = "^4.3.0"
+ipywidgets = "~=8.1.2"
+kneed = "~=0.8.5"
 matplotlib = ">=3.7.1"
 seaborn = ">=0.12.2"
 pandas = ">=2.0.0"
