--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "~=3.11"
 notebook = ">=6.5.4"
-scikit-learn = ">=1.2.2"
+scikit-learn = "^1.5.0"
 tensorflow-io-gcs-filesystem = {version = ">=0.36.0", python = ">=3.11,<3.12"}
 tensorflow = "~=2.15.0"
 keras = "^2.15.0"
