--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,7 @@ python-math = "^0.0.1"
 logging4 = "^0.0.2"
 joblib = "^1.3.2"
 dill = "^0.3.8"
+beautifulsoup4 = "4.12.3"
 
 [build-system]
 requires = ["poetry-core"]
